--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -15,15 +15,13 @@ jobs:
     
     steps:
     - uses: actions/checkout@v2
-    - name: install_tcc
-      run: sudo apt-get install tcc
     - name: build_the_demos
       run: make -B check CC=gcc
     - name: show_environment_info
       run: uname -a && cat /proc/cpuinfo && uname -r && lsb_release -a && gcc --version
-    - name: execute_program_asm_with_tcc
-      run: tcc -run\ -DUSE_UNSIGNED_INT a.c -run program.asm
-    - name: execute_echo2_asm_with_tcc
-      run: tcc -run\ -DUSE_UNSIGNED_INT a.c -run echo2.asm < isa.h
-    - name: show_tcc_version
-      run: tcc -v
+    - name: execute_program_asm
+      run: ./program.asm
+    - name: execute_echo2_asm
+      run: ./echo2.asm < isa.h
+    - name: show_gcc_version
+      run: gcc --version
